--- a/style.css
+++ b/style.css
@@ -1,5 +1,56 @@
+
+body{
+    background-color:hsl(212,45%, 89%);
+    height: 100vh;
+    width: 100vw;
+
+}
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+.card{
+    width: 250px;
+    background-color:hsl(0,0%,100%);
+    margin-left: auto;
+    margin-right: auto;
+    padding: 20px;
+    border-radius: 12px;
+
+
+}
+
+.card-img-container{
+    width:200px;
+    margin-bottom: 15px;
+
+
+}
+
+.card-img{
+
+    width:100%;
+    height: auto;
+    margin-left: auto;
+    margin-right: auto;
+ border-radius: 12px;
+
+
+}
+
+.card-heading {
+font-size: 26px;
+text-align: center;
+margin-bottom: 15px;
+color: hsl(218, 44%, 22%);
+}
+
+.card-para{
+
+    text-align: center;
+    font-size: 15px;
+    margin-bottom: 20px;
+    color: hsl(220, 15%,55%);
 }
